Added bell audio when alarm start
When alarm starts it will show stop alarm button and hide set alarm button

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
                     </div>
                 </div>
 
-                <button id="setAlarmBtn" onclick="serAlarm()">SET ALARM</button>
+                <button id="setAlarmBtn" onclick="setAlarm()">SET ALARM</button>
+                <button id="stopAlarmBtn" onclick="stopAlarm()">STOP ALARM</button>
             </div>
             <h2 style="letter-spacing: 2px; color: rgb(24, 27, 18); margin-top: 10px;">Alarm List</h2>
             <div id="alarmList"> 
