Added favicon icon

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="shortcut icon" href="" type="image/x-icon">
+	<link rel="shortcut icon" href="https://5.imimg.com/data5/HH/DT/MY-7577666/twin-bell-alarm-clock-500x500.jpg" type="image/x-icon">
 	<meta charset="utf-8">
 	<title>Alarm clock</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
